# vmaf

libvmaf/include/libvmaf/: meson.build
libvmaf/src/: meson.build
